--- a/admin/package.json
+++ b/admin/package.json
@@ -11,6 +11,7 @@
   "dependencies": {},
   "devDependencies": {
     "body-parser": "^1.17.2",
+    "cheerio": "^1.0.0-rc.2",
     "connect": "^3.6.2",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
@@ -22,6 +23,7 @@
     "express-session": "^1.15.3",
     "file-loader": "^0.9.0",
     "fs": "^0.0.1-security",
+    "iconv-lite": "^0.4.18",
     "jade": "^1.11.0",
     "memory-cache": "^0.1.4",
     "mkdirp": "^0.5.1",
